--- a/rufangrongke/rufangrongke/Classes/loupan/WXZLouPanMessageCell_0_1.xib
+++ b/rufangrongke/rufangrongke/Classes/loupan/WXZLouPanMessageCell_0_1.xib
@@ -1,33 +1,159 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="WXZLouPanMessageCell_0_1">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="106" id="KGk-i7-Jjw" customClass="WXZLouPanMessageCell_0_1">
+            <rect key="frame" x="0.0" y="0.0" width="465" height="111"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="465" height="110.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0_1" translatesAutoresizingMaskIntoConstraints="NO" id="Wtp-6n-WWP">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
-                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Flx-qi-lQO" userLabel="View1">
+                        <rect key="frame" x="0.0" y="0.0" width="155" height="110.5"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loupan-quan" translatesAutoresizingMaskIntoConstraints="NO" id="HpK-wB-8qU">
+                                <rect key="frame" x="34" y="13" width="86" height="85"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="86" id="Esl-hU-EMp"/>
+                                    <constraint firstAttribute="height" constant="85" id="SQY-vV-70O"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="意向客户" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ei8-jg-XU9">
+                                <rect key="frame" x="55" y="58" width="45" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="17" id="pPO-d4-xsn"/>
+                                    <constraint firstAttribute="width" constant="45" id="t2V-s2-pxw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1222" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="65p-yV-1YI">
+                                <rect key="frame" x="64" y="43" width="27.5" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ei8-jg-XU9" firstAttribute="centerX" secondItem="HpK-wB-8qU" secondAttribute="centerX" id="Ohg-fy-bEK"/>
+                            <constraint firstItem="65p-yV-1YI" firstAttribute="centerX" secondItem="Flx-qi-lQO" secondAttribute="centerX" id="QNl-Lu-bgu"/>
+                            <constraint firstItem="ei8-jg-XU9" firstAttribute="top" secondItem="HpK-wB-8qU" secondAttribute="bottom" constant="-40" id="QWW-Uw-JNe"/>
+                            <constraint firstItem="HpK-wB-8qU" firstAttribute="centerX" secondItem="Flx-qi-lQO" secondAttribute="centerX" id="Z4r-FJ-gvk"/>
+                            <constraint firstItem="HpK-wB-8qU" firstAttribute="centerY" secondItem="Flx-qi-lQO" secondAttribute="centerY" id="eEr-Th-LXv"/>
+                            <constraint firstItem="65p-yV-1YI" firstAttribute="bottom" secondItem="ei8-jg-XU9" secondAttribute="top" id="iGM-z1-2Zb"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CyR-ML-69n" userLabel="View2">
+                        <rect key="frame" x="155" y="0.0" width="155" height="110.5"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loupan-quan" translatesAutoresizingMaskIntoConstraints="NO" id="M3x-Qs-9Tk">
+                                <rect key="frame" x="34" y="13" width="86" height="85"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="86" id="G0r-Gc-zxT"/>
+                                    <constraint firstAttribute="height" constant="85" id="W4G-0V-CRn"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="合作经纪人" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ShE-p7-EQz">
+                                <rect key="frame" x="49" y="58" width="56" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="56" id="JlS-bn-gyX"/>
+                                    <constraint firstAttribute="height" constant="17" id="moa-vG-P3X"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1222" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G1i-a1-4Vx">
+                                <rect key="frame" x="64" y="43" width="27.5" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="M3x-Qs-9Tk" firstAttribute="centerY" secondItem="CyR-ML-69n" secondAttribute="centerY" id="EM8-JY-Gpz"/>
+                            <constraint firstItem="M3x-Qs-9Tk" firstAttribute="centerX" secondItem="CyR-ML-69n" secondAttribute="centerX" id="HXA-C2-01x"/>
+                            <constraint firstItem="ShE-p7-EQz" firstAttribute="top" secondItem="G1i-a1-4Vx" secondAttribute="bottom" id="Zgb-qu-wUy"/>
+                            <constraint firstItem="ShE-p7-EQz" firstAttribute="top" secondItem="M3x-Qs-9Tk" secondAttribute="bottom" constant="-40" id="chi-ZR-Qb0"/>
+                            <constraint firstItem="ShE-p7-EQz" firstAttribute="centerX" secondItem="M3x-Qs-9Tk" secondAttribute="centerX" id="doi-aC-oLL"/>
+                            <constraint firstItem="G1i-a1-4Vx" firstAttribute="centerX" secondItem="CyR-ML-69n" secondAttribute="centerX" id="vbS-I0-ghe"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zWS-Za-AXi" userLabel="View3">
+                        <rect key="frame" x="310" y="0.0" width="155" height="110.5"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loupan-quan" translatesAutoresizingMaskIntoConstraints="NO" id="kBX-zQ-pu5">
+                                <rect key="frame" x="34" y="13" width="86" height="85"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="85" id="gbO-sa-bTH"/>
+                                    <constraint firstAttribute="width" constant="86" id="lal-2Y-SrP"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="最近成交" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W8D-Az-0vK">
+                                <rect key="frame" x="55" y="58" width="45" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="45" id="Y9l-dR-t8j"/>
+                                    <constraint firstAttribute="height" constant="17" id="e0R-5Y-flS"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1222" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qSR-sY-4vy">
+                                <rect key="frame" x="64" y="43" width="27.5" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="W8D-Az-0vK" firstAttribute="centerX" secondItem="kBX-zQ-pu5" secondAttribute="centerX" id="4ub-qv-rFC"/>
+                            <constraint firstItem="kBX-zQ-pu5" firstAttribute="centerY" secondItem="zWS-Za-AXi" secondAttribute="centerY" id="DDx-kg-0fJ"/>
+                            <constraint firstItem="kBX-zQ-pu5" firstAttribute="centerX" secondItem="zWS-Za-AXi" secondAttribute="centerX" id="NwL-nK-3yk"/>
+                            <constraint firstItem="W8D-Az-0vK" firstAttribute="top" secondItem="kBX-zQ-pu5" secondAttribute="bottom" constant="-40" id="RYc-QK-hH2"/>
+                            <constraint firstItem="qSR-sY-4vy" firstAttribute="centerX" secondItem="zWS-Za-AXi" secondAttribute="centerX" id="TgP-ov-SzY"/>
+                            <constraint firstItem="W8D-Az-0vK" firstAttribute="top" secondItem="qSR-sY-4vy" secondAttribute="bottom" id="YvC-rS-hm3"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Wtp-6n-WWP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="2kA-ga-bXa"/>
-                    <constraint firstAttribute="bottom" secondItem="Wtp-6n-WWP" secondAttribute="bottom" id="5F9-sh-g6k"/>
-                    <constraint firstAttribute="trailing" secondItem="Wtp-6n-WWP" secondAttribute="trailing" id="LAr-lY-Mgt"/>
-                    <constraint firstItem="Wtp-6n-WWP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="tPY-8H-egc"/>
+                    <constraint firstItem="zWS-Za-AXi" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="0mt-Vr-pUb"/>
+                    <constraint firstItem="zWS-Za-AXi" firstAttribute="width" secondItem="Flx-qi-lQO" secondAttribute="width" id="95J-ZG-Exq"/>
+                    <constraint firstItem="zWS-Za-AXi" firstAttribute="leading" secondItem="CyR-ML-69n" secondAttribute="trailing" id="Ccz-8m-2fn"/>
+                    <constraint firstItem="zWS-Za-AXi" firstAttribute="height" secondItem="Flx-qi-lQO" secondAttribute="height" id="LjM-pU-Umo"/>
+                    <constraint firstAttribute="bottom" secondItem="zWS-Za-AXi" secondAttribute="bottom" id="M0g-xX-Tzh"/>
+                    <constraint firstItem="CyR-ML-69n" firstAttribute="leading" secondItem="Flx-qi-lQO" secondAttribute="trailing" id="NNH-LF-qZk"/>
+                    <constraint firstAttribute="trailing" secondItem="zWS-Za-AXi" secondAttribute="trailing" id="RWH-4s-cv9"/>
+                    <constraint firstAttribute="bottom" secondItem="CyR-ML-69n" secondAttribute="bottom" id="bNV-fy-H4V"/>
+                    <constraint firstItem="CyR-ML-69n" firstAttribute="leading" secondItem="Flx-qi-lQO" secondAttribute="trailing" id="e47-fu-99E"/>
+                    <constraint firstAttribute="bottom" secondItem="Flx-qi-lQO" secondAttribute="bottom" id="eIY-rb-zrm"/>
+                    <constraint firstItem="zWS-Za-AXi" firstAttribute="leading" secondItem="CyR-ML-69n" secondAttribute="trailing" id="jN0-I1-nqY"/>
+                    <constraint firstItem="CyR-ML-69n" firstAttribute="height" secondItem="Flx-qi-lQO" secondAttribute="height" id="k31-Ie-vkZ"/>
+                    <constraint firstItem="CyR-ML-69n" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="lOF-hb-Y8n"/>
+                    <constraint firstItem="Flx-qi-lQO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="m9g-fY-0Au"/>
+                    <constraint firstItem="Flx-qi-lQO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="rd2-JP-TRD"/>
+                    <constraint firstItem="CyR-ML-69n" firstAttribute="width" secondItem="Flx-qi-lQO" secondAttribute="width" id="ugd-F4-N75"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="hezuojingjirenNum" destination="G1i-a1-4Vx" id="sJV-FL-5F7"/>
+                <outlet property="yixiangkehuNum" destination="65p-yV-1YI" id="cD6-PJ-nbg"/>
+                <outlet property="zuijinchengjiaoNum" destination="qSR-sY-4vy" id="7Lk-gg-ZLW"/>
+            </connections>
+            <point key="canvasLocation" x="476.5" y="301.5"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="0_1" width="886" height="252"/>
+        <image name="loupan-quan" width="86" height="85"/>
     </resources>
 </document>
