--- a/rufangrongke/rufangrongke/Classes/kehu/View/WXZKeHuListCell.xib
+++ b/rufangrongke/rufangrongke/Classes/kehu/View/WXZKeHuListCell.xib
@@ -32,17 +32,17 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button hidden="YES" opaque="NO" tag="100002" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y2D-OG-scV">
+                    <button hidden="YES" opaque="NO" tag="1000020" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y2D-OG-scV">
                         <rect key="frame" x="280" y="10" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="3Le-3V-5T5"/>
                             <constraint firstAttribute="width" constant="30" id="vku-tM-Mhl"/>
                         </constraints>
-                        <state key="normal" image="kh_dhua">
+                        <state key="normal" image="kh_bodaliebiaoye">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
-                    <button opaque="NO" tag="100001" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="erf-6Y-EBw">
+                    <button opaque="NO" tag="1000010" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="erf-6Y-EBw">
                         <rect key="frame" x="280" y="20" width="28" height="14"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="14" id="2In-HE-lnG"/>
@@ -73,17 +73,17 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="callBtn" destination="y2D-OG-scV" id="0YW-IN-XW5"/>
                 <outlet property="customerNameLabel" destination="dJV-1k-Nut" id="sXU-1s-hBV"/>
                 <outlet property="customerPhoneLabel" destination="lEf-VQ-wPd" id="09F-Kb-m7r"/>
                 <outlet property="houseInfoLabel" destination="rzy-WV-XnJ" id="3Kh-mD-EAd"/>
                 <outlet property="reportedBtn" destination="erf-6Y-EBw" id="Pe1-Kz-aQw"/>
-                <outlet property="reportedOrCallBtn" destination="y2D-OG-scV" id="z5s-Ys-6Q7"/>
             </connections>
             <point key="canvasLocation" x="245" y="338.5"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="kh_dhua" width="25" height="25"/>
+        <image name="kh_bodaliebiaoye" width="24" height="25"/>
         <image name="kh_reported_deselect" width="28" height="14"/>
     </resources>
 </document>
