--- a/rufangrongke/rufangrongke/Classes/kehu/View/WXZHousingDetailsCell.xib
+++ b/rufangrongke/rufangrongke/Classes/kehu/View/WXZHousingDetailsCell.xib
@@ -23,12 +23,13 @@
                                 <color key="textColor" red="0.10588235294117647" green="0.10980392156862745" blue="0.10588235294117647" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8zi-4L-cb7">
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8zi-4L-cb7">
                                 <rect key="frame" x="315" y="7" width="43" height="22"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="43" id="3ft-Ye-RHe"/>
                                     <constraint firstAttribute="height" constant="22" id="ATa-cU-LOP"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" backgroundImage="kh_hsbk">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
