--- a/rufangrongke/rufangrongke/Classes/kehu/View/WXZKhdUserInfoCell.xib
+++ b/rufangrongke/rufangrongke/Classes/kehu/View/WXZKhdUserInfoCell.xib
@@ -63,11 +63,8 @@
                         <state key="normal">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
-                        <connections>
-                            <action selector="smsAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="I8X-sn-YLK"/>
-                        </connections>
                     </button>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入姓名" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FxU-5Y-LHO">
+                    <textField opaque="NO" clipsSubviews="YES" tag="100019" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入姓名" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FxU-5Y-LHO">
                         <rect key="frame" x="66" y="10" width="150" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="150" id="VHl-KC-nmZ"/>
@@ -75,7 +72,7 @@
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <textInputTraits key="textInputTraits"/>
                     </textField>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入11位手机号" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="69K-Bp-Kmu">
+                    <textField opaque="NO" clipsSubviews="YES" tag="100020" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入11位手机号" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="69K-Bp-Kmu">
                         <rect key="frame" x="66" y="39" width="150" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="150" id="avf-Up-4bK"/>
