--- a/rufangrongke/rufangrongke/Classes/kehu/View/WXZPriceCell.xib
+++ b/rufangrongke/rufangrongke/Classes/kehu/View/WXZPriceCell.xib
@@ -41,7 +41,7 @@
                             <constraint firstAttribute="width" constant="70" id="dLM-5s-InS"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <textInputTraits key="textInputTraits"/>
+                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                     </textField>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="至" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RTL-mq-bNN">
                         <rect key="frame" x="166" y="46" width="15" height="18"/>
@@ -57,7 +57,7 @@
                             <constraint firstAttribute="height" constant="19" id="dY5-29-3Mb"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <textInputTraits key="textInputTraits"/>
+                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                     </textField>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VJx-0M-ehv">
                         <rect key="frame" x="11" y="202" width="352" height="44"/>
